fix function createLetterBoxes showing letters and add gap in #letterBoxes li in style.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,7 @@ footer {
 
 #letterBoxes li {
   display: inline-flex;
+  gap: 0.25em;
 }
 
 #letterBoxes input {
